Changed all dtos to records to reduce boilerplate code